cmake_minimum_required(VERSION 2.8.4)
project(cs261-DataStructures)

set(CMAKE_C_FLAGS "-std=c99")

add_executable(assignment1-0 "assignment1/Q0.c")
add_executable(assignment1-1 "assignment1/Q1.c")
add_executable(assignment1-2 "assignment1/Q2.c")
add_executable(assignment1-3 "assignment1/Q3.c")
add_executable(assignment1-4 "assignment1/Q4.c")
add_executable(assignment1-5 "assignment1/Q5.c")